--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gh-pages": "^5.0.0",
     "mdb-react-ui-kit": "^6.0.0",
     "react": "^18.2.0",
+    "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.11.0",
