--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
     "react-image-zoom-pan": "^0.3.1",
+    "react-multi-carousel": "^2.8.4",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.11.0",
     "react-scripts": "^5.0.1",
